--- a/backend/views/login.ejs
+++ b/backend/views/login.ejs
@@ -61,10 +61,10 @@
                 <p>Wrong credentials, try again!</p>
               <% }%>
               <div class="form-group">
-                <input type="email" name="email" class="form-control" id="email" placeholder="E-mail" required>
+                <input type="email" name="email" class="form-control" id="emailsignin" placeholder="E-mail" required>
               </div>
               <div class="form-group">
-                <input type="password" class="form-control" name="mdp" id="mdp" placeholder="Password" required>
+                <input type="password" class="form-control" name="mdp" id="mdpsignin" placeholder="Password" required>
               </div>
             <div class="text-center"><button type="submit">Jouer</button></div>
           </form>
@@ -75,10 +75,10 @@
                 <p>Bad char</p>
               <% }%>
               <div class="form-group">
-                <input type="email" name="email" class="form-control" id="email" placeholder="E-mail" required>
+                <input type="email" name="email" class="form-control" id="emailsignup" placeholder="E-mail" required>
               </div>
               <div class="form-group">
-                <input type="password" class="form-control" name="mdp" id="mdp" placeholder="Password" required>
+                <input type="password" class="form-control" name="mdp" id="mdpsignup" placeholder="Password" required>
               </div>
             <div class="text-center"><button type="submit">S'inscrire</button></div>
           </form>
